# HairEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ReadMe.md
Cmake/: AddCompilerFlag.cmake  CheckCCompilerFlag.cmake  CheckCXXCompilerFlag.cmake  CheckMicCCompilerFlag.cmake  CheckMicCXXCompilerFlag.cmake  FindOpenMP.cmake  OptimizeForArchitecture.cmake
HairEngine/: CMakeLists.txt  HairEngine.cpp  HairEngine.h
HairEngine/accel/: particle_spatial_hashing.cu  particle_spatial_hashing.h
HairEngine/collision/: bone_skinning_animation_data.h
HairEngine/cuda/: cuda_test.cu  cuda_test.h
HairEngine/geo/: hair.cpp  hair.h
HairEngine/main/: main.cpp
HairEngine/old/: finite_grid.h
HairEngine/precompiled/: precompiled.h
HairEngine/solver/: bone_skinning_animation_data_updater.h  bone_skinning_animation_data_visualizer.h  collision_impulse_cuda_solver.cu  collision_impulse_cuda_solver.h  collision_impulse_solver.h  cuda_based_solver.h  cuda_memory_converter.h  cuda_segment_midpoint_computer.cu  cuda_segment_midpoint_computer.h  force_applier.h  hair_contacts_and_collision_impulse_visualizer.h  hair_contacts_impulse_cuda_solver.cu  hair_contacts_impulse_cuda_solver.h  hair_contacts_impulse_solver.h  hair_contacts_pbd_solver.cu  hair_contacts_pbd_solver.h  hair_contacts_pbd_solver_lambda_computer.h  hair_contacts_solver.h  hair_particle_visualizer.h  hair_visualizer.h  integration_info.h  integrator.h  particle_knn_solver.h  position_commiter.h  sdf_collision_solver.cu  sdf_collision_solver.h  segment_knn_solver.h  segment_knn_solver_visualizer.h  selle_mass_spring_conf.h  selle_mass_spring_implicit_cuda_solver.cu  selle_mass_spring_implicit_cuda_solver.h  selle_mass_spring_implicit_heptadiagnoal_solver.h  selle_mass_spring_implicit_solver.h  selle_mass_spring_semi_implicit_euler_solver.h  selle_mass_spring_solver_base.h  selle_mass_spring_visualizer.h  signed_distance_field_solid_collision_solver.h  solid_collision_solver_base.h  solver.h  visualizer.h
HairEngine/util/: cuda_helper_math.h  cudautil.h  eigenutil.h  fileutil.h  helper_math.cuh  mathutil.h  parallutil.h  parmutil.h  simple_mat.h  stringutil.h
